# poc_django_rest

./: .gitignore  README.md  pyproject.toml
poc/app/: urls.py  views.py
poc/poc/: settings.py  urls.py
